--- a/src/components/Accordion/accordion-item.css
+++ b/src/components/Accordion/accordion-item.css
@@ -54,8 +54,12 @@
 .accordion-btn:not(:disabled):focus-visible {
   z-index: 3;
   outline: 0;
-  box-shadow: var(--sgds-box-shadow-focus);
   background-color: var(--sgds-bg-translucent-subtle);
+}
+
+.accordion-btn:not(.disabled):focus-visible,
+.accordion-btn:not(:disabled):focus-visible {
+  box-shadow: var(--sgds-box-shadow-focus);
 }
 
 .accordion-btn.disabled,
