--- a/src/components/Alert/alert-link.css
+++ b/src/components/Alert/alert-link.css
@@ -11,5 +11,8 @@
 .alert-link:focus,
 .alert-link:focus-visible {
   outline: 0;
+}
+
+.alert-link:focus-visible {
   box-shadow: var(--sgds-box-shadow-focus);
 }
