--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -69,6 +69,9 @@ slot[name="description"]::slotted(*) {
 .footer-mandatory-links ul li a:focus,
 .footer-mandatory-links ul li a:focus-visible {
   outline: 0;
+}
+
+.footer-mandatory-links ul li a:focus-visible {
   box-shadow: var(--sgds-box-shadow-focus);
 }
 
@@ -101,8 +104,11 @@ slot[name="social-media"]::slotted(a:focus),
 slot[name="social-media"]::slotted(a:focus-visible) {
   --sgds-link-color-emphasis: var(--sgds-color-fixed-light);
   outline: 0;
-  box-shadow: var(--sgds-box-shadow-focus);
   color: var(--sgds-link-color-emphasis);
+}
+
+slot[name="social-media"]::slotted(a:focus-visible) {
+  box-shadow: var(--sgds-box-shadow-focus);
 }
 
 .footer-mandatory-links {
