--- a/src/components/Masthead/masthead.css
+++ b/src/components/Masthead/masthead.css
@@ -157,6 +157,11 @@ a.trusted-websites-link:focus-visible,
 .sgds-masthead-button:focus,
 .sgds-masthead-button:focus-visible {
   outline: 0;
+}
+
+a.trusted-websites-link:focus-visible,
+.sgds-masthead-button:focus-visible {
+  outline: 0;
 	box-shadow: 0px 0px 0px 4px #60aaf4;
 }
 
