--- a/src/components/Sidenav/sidenav-item.css
+++ b/src/components/Sidenav/sidenav-item.css
@@ -47,14 +47,18 @@ button {
 .sidenav-btn:focus:not(.disabled),
 .sidenav-btn:focus-visible:not(.disabled) {
   outline: 0;
-  box-shadow: var(--sgds-box-shadow-focus);
   background-color: var(--sgds-bg-translucent-subtle);
+}
+.sidenav-btn:focus-visible:not(.disabled) {
+  box-shadow: var(--sgds-box-shadow-focus);
 }
 
 .no-menu-default:focus,
 .no-menu-default:focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
   background-color: var(--sgds-default-bg-translucent-subtle);
+}
+.no-menu-default:focus-visible {
+  box-shadow: var(--sgds-box-shadow-focus);
 }
 .no-menu-default::slotted(a) {
   text-decoration: none !important;
@@ -75,8 +79,10 @@ button {
 .no-menu-default::slotted(a:focus),
 .no-menu-default::slotted(a:focus-visible) {
   outline: 0 !important;
-  box-shadow: var(--sgds-box-shadow-focus);
   background-color: var(--sgds-bg-translucent-subtle);
+}
+.no-menu-default::slotted(a:focus-visible) {
+  box-shadow: var(--sgds-box-shadow-focus);
 }
 
 :host([class^="first-level"][active]) .no-menu-default::slotted(a) {
