fix(mainanv): close menu on mobile when link is clicked

--- a/src/components/Dropdown/dropdown-item.css
+++ b/src/components/Dropdown/dropdown-item.css
@@ -1,3 +1,7 @@
+:host([disabled]) {
+  cursor: not-allowed;
+}
+
 .dropdown-item {
   background-color: var(--sgds-bg-transparent);
   padding: var(--sgds-padding-sm) var(--sgds-padding-lg);
