--- a/src/components/Subnav/subnav-item.css
+++ b/src/components/Subnav/subnav-item.css
@@ -7,6 +7,7 @@
   --sgds-font-size-2: var(--sgds-font-size-1);
   --sgds-link-color-default: var(--sgds-color-default);
   display: inline-block;
+  width: 100%;
   text-decoration: none !important;
   font-size: var(--sgds-font-size-2, var(--sgds-font-size-1));
   color: var(--sgds-link-color-default, var(--sgds-color-default));
