--- a/src/styles/reboot.css
+++ b/src/styles/reboot.css
@@ -1,6 +1,8 @@
 *,
 *::after,
 *::before {
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
   box-sizing: border-box;
 }
 @media (prefers-reduced-motion: no-preference) {
