chore(thumbnail card): set thumbnail image to 100% width

--- a/src/components/ThumbnailCard/thumbnail-card.css
+++ b/src/components/ThumbnailCard/thumbnail-card.css
@@ -35,6 +35,7 @@ slot[name="thumbnail"]::slotted(*) {
   min-width: 64px !important;
   max-width: 128px !important;
   height: 64px !important;
+  width: 100%;
   object-fit: contain;
   object-position: left;
 }
