--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -58,7 +58,7 @@
 }
 
 .modal-header__close {
-  position: absolute;
+  position: relative;
   top: calc(-1 * var(--sgds-padding-md));
   right: calc(-1 * var(--sgds-padding-md));
 }
