--- a/src/components/Dropdown/dropdown-menu.css
+++ b/src/components/Dropdown/dropdown-menu.css
@@ -1,3 +1,7 @@
+:host([menuisopen]) .dropdown-menu {
+  display: block;
+}
+
 .dropdown-menu {
   background-clip: padding-box;
   background-color: var(--sgds-surface-default);
@@ -13,7 +17,7 @@
   position: absolute;
   text-align: left;
   overflow-y: auto;
-  z-index: 1000;
+  z-index: 500;
 }
 .dropdown-menu.show {
   display: block;
