--- a/src/components/Drawer/drawer.css
+++ b/src/components/Drawer/drawer.css
@@ -99,18 +99,13 @@
 }
 
 slot[name="title"]::slotted(*) {
-  --sgds-margin-2-xs: var(--sgds-margin-none);
-  --sgds-margin-xs: var(--sgds-margin-none);
-  --sgds-font-size-6: var(--sgds-font-size-4);
-  --sgds-font-size-7: var(--sgds-font-size-4);
-  margin-bottom: var(--sgds-margin-2-xs, var(--sgds-margin-none));
-  font-size: var(--sgds-font-size-6, var(--sgds-font-size-4));
+  margin-bottom: var(--sgds-margin-none) !important;
+  font-size: var(--sgds-font-size-4) !important;
   color: var(--sgds-color-default) !important;
 }
 
 slot[name="description"]::slotted(*) {
-  --sgds-paragraph-spacing-xl: var(--sgds-margin-none);
-  margin-bottom: var(--sgds-paragraph-spacing-xl, var(--sgds-margin-none));
+  margin-bottom: var(--sgds-margin-none) !important;
   color: var(--sgds-color-subtle);
 }
 
