style(mainnav): apply position relative to desktop view only in order to apply z-index

--- a/src/components/Mainnav/mainnav.css
+++ b/src/components/Mainnav/mainnav.css
@@ -2,6 +2,10 @@
   z-index: 1200;
 }
 
+:host([expand="always"]) {
+  position: relative;
+}
+
 nav {
   background-color: var(--sgds-surface-default);
   box-shadow: 0px 2px 2px 0px rgba(14, 14, 14, 0.08);
@@ -96,6 +100,10 @@ nav > .navbar-body slot::slotted(:not(sgds-mainnav-item):not(sgds-mainnav-dropdo
 }
 
 @media (min-width: 576px) {
+  :host([expand="sm"]) {
+    position: relative;
+  }
+
   .navbar-expand-sm {
     flex-wrap: nowrap;
     justify-content: flex-start;
@@ -120,6 +128,10 @@ nav > .navbar-body slot::slotted(:not(sgds-mainnav-item):not(sgds-mainnav-dropdo
   }
 }
 @media (min-width: 768px) {
+  :host([expand="md"]) {
+    position: relative;
+  }
+
   .navbar-expand-md {
     flex-wrap: nowrap;
     justify-content: flex-start;
@@ -144,6 +156,10 @@ nav > .navbar-body slot::slotted(:not(sgds-mainnav-item):not(sgds-mainnav-dropdo
   }
 }
 @media (min-width: 1024px) {
+  :host([expand="lg"]) {
+    position: relative;
+  }
+
   .navbar-expand-lg {
     flex-wrap: nowrap;
     justify-content: flex-start;
@@ -168,6 +184,10 @@ nav > .navbar-body slot::slotted(:not(sgds-mainnav-item):not(sgds-mainnav-dropdo
   }
 }
 @media (min-width: 1280px) {
+  :host([expand="xl"]) {
+    position: relative;
+  }
+
   .navbar-expand-xl {
     flex-wrap: nowrap;
     justify-content: flex-start;
@@ -197,6 +217,10 @@ nav > .navbar-body slot::slotted(:not(sgds-mainnav-item):not(sgds-mainnav-dropdo
   }
 }
 @media (min-width: 1440px) {
+  :host([expand="xxl"]) {
+    position: relative;
+  }
+
   .navbar-expand-xxl {
     flex-wrap: nowrap;
     justify-content: flex-start;
