fix(mainnav): recalculate mobile menu max-height on scroll to account for page offset

--- a/src/components/Mainnav/mainnav.css
+++ b/src/components/Mainnav/mainnav.css
@@ -59,7 +59,7 @@ nav > .navbar-body .navbar-nav {
 }
 
 nav > .navbar-body {
-  position: fixed;
+  position: absolute;
   z-index: 2000;
   width: 100%;
   background-color: var(--sgds-surface-default);
