refactor(Select): display none to default slot

--- a/src/components/Select/select.css
+++ b/src/components/Select/select.css
@@ -100,3 +100,7 @@
 .form-control-group.disabled {
   background-color: var(--sgds-form-surface-muted);
 }
+
+slot::slotted(*){
+  display: none;
+}
