refactor(*): box-shadow to outline wip
components like dropdown menu and mobile menu has overflow property which clips outline

--- a/src/base/card.css
+++ b/src/base/card.css
@@ -111,12 +111,8 @@ a.card {
   pointer-events: none;
 }
 
-a.card:focus {
-  outline: 0;
-}
-
 a.card:not(.disabled):focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
+  outline: var(--sgds-outline-focus);
 }
 
 .card-tinted-bg {
@@ -238,14 +234,8 @@ slot[name="link"]::slotted(a:focus) {
   color: var(--sgds-link-color-emphasis);
 }
 
-slot[name="title"]::slotted(a:focus),
-slot[name="footer"]::slotted(a:focus),
-slot[name="link"]::slotted(a:focus) {
-  outline: 0;
-}
-
 slot[name="title"]::slotted(a:focus-visible),
 slot[name="footer"]::slotted(a:focus-visible),
 slot[name="link"]::slotted(a:focus-visible) {
-  box-shadow: var(--sgds-box-shadow-focus);
+  outline: var(--sgds-outline-focus);
 }
