--- a/src/components/Alert/alert-link.css
+++ b/src/components/Alert/alert-link.css
@@ -8,11 +8,6 @@
   text-decoration-line: underline;
 }
 
-.alert-link:focus,
 .alert-link:focus-visible {
-  outline: 0;
-}
-
-.alert-link:focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
+  outline: var(--sgds-outline-focus);
 }
