--- a/src/base/button.css
+++ b/src/base/button.css
@@ -96,11 +96,7 @@
 .btn:focus-visible {
   background-color: var(--btn-hover-bg);
   border-color: transparent;
-  outline: 0;
-}
-
-.btn:focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
+  outline: var(--sgds-outline-focus);
 }
 
 .btn.disabled,
