--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -5,8 +5,11 @@
 }
 input {
   margin: 0;
-}
 
+}
+input[type="checkbox"]:focus-visible {
+  outline: none;
+}
 .form-check {
   display: flex;
   gap: var(--sgds-form-gap-md);
@@ -38,8 +41,7 @@ input {
 .form-check-input:focus,
 .form-check-input:focus-visible {
   border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
-  box-shadow: var(--sgds-form-box-shadow-focus);
-  outline: 0;
+  outline: var(--sgds-form-outline-focus);
 }
 
 .form-check-input:checked,
