--- a/src/components/Footer/footer-item.css
+++ b/src/components/Footer/footer-item.css
@@ -36,11 +36,6 @@ slot::slotted(a:hover),
   color: var(--sgds-link-color-emphasis, --sgds-color-fixed-light);
 }
 
-.links slot::slotted(a:focus),
 .links slot::slotted(a:focus-visible) {
-  outline: 0;
-}
-
-.links slot::slotted(a:focus-visible) {
-  box-shadow: var(--sgds-box-shadow-focus);
+  outline: var(--sgds-outline-focus);
 }
