--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -66,13 +66,8 @@ slot[name="description"]::slotted(*) {
   color: var(--sgds-color-fixed-light);
 }
 
-.footer-mandatory-links ul li a:focus,
 .footer-mandatory-links ul li a:focus-visible {
-  outline: 0;
-}
-
-.footer-mandatory-links ul li a:focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
+  outline: var(--sgds-outline-focus);
 }
 
 .footer-bottom {
@@ -103,12 +98,11 @@ slot[name="social-media"]::slotted(a:hover) {
 slot[name="social-media"]::slotted(a:focus),
 slot[name="social-media"]::slotted(a:focus-visible) {
   --sgds-link-color-emphasis: var(--sgds-color-fixed-light);
-  outline: 0;
   color: var(--sgds-link-color-emphasis);
 }
 
 slot[name="social-media"]::slotted(a:focus-visible) {
-  box-shadow: var(--sgds-box-shadow-focus);
+  outline: var(--sgds-outline-focus);
 }
 
 .footer-mandatory-links {
