--- a/src/components/Mainnav/mainnav-dropdown.css
+++ b/src/components/Mainnav/mainnav-dropdown.css
@@ -10,10 +10,6 @@
     padding: 0px var(--sgds-padding-md);
     border-bottom: var(--sgds-border-width-4) solid transparent;
   }
-
-  /* :host([expand="sm"]) .nav-link:not(.disabled):focus-visible {
-    outline: var(--sgds-outline-focus);
-  } */
 }
 
 @media (min-width: 768px) {
@@ -22,10 +18,6 @@
     padding: 0px var(--sgds-padding-md);
     border-bottom: var(--sgds-border-width-4) solid transparent;
   }
-
-  /* :host([expand="md"]) .nav-link:not(.disabled):focus-visible {
-    outline: var(--sgds-outline-focus);
-  } */
 }
 
 @media (min-width: 1024px) {
@@ -36,9 +28,6 @@
     border-bottom: var(--sgds-border-width-4) solid transparent;
   }
 
-  /* :host([expand="lg"]) .nav-link:not(.disabled):focus-visible {
-    outline: var(--sgds-outline-focus);
-  } */
 }
 
 @media (min-width: 1280px) {
@@ -47,10 +36,6 @@
     padding: 0px var(--sgds-padding-md);
     border-bottom: var(--sgds-border-width-4) solid transparent;
   }
-/* 
-  :host([expand="xl"]) .nav-link:not(.disabled):focus-visible {
-    box-shadow: var(--sgds-box-shadow-focus);
-  } */
 }
 
 @media (min-width: 1440px) {
@@ -59,10 +44,6 @@
     padding: 0px var(--sgds-padding-md);
     border-bottom: var(--sgds-border-width-4) solid transparent;
   }
-
-  /* :host([expand="xxl"]) .nav-link:not(.disabled):focus-visible {
-    box-shadow: var(--sgds-box-shadow-focus);
-  } */
 }
 
 .nav-link {
@@ -90,14 +71,10 @@
 .nav-link:not(.disabled):hover {
   color: var(--sgds-primary-color-default);
 }
-/* 
-.nav-link:not(.disabled):focus,
-.nav-link:not(.disabled):focus-visible {
-  outline: 0;
-} */
 
 .nav-link:not(.disabled):focus-visible {
   outline: var(--sgds-outline-focus);
+  outline-offset: -4px;
   color: var(--sgds-primary-color-default);
 }
 
@@ -130,13 +107,14 @@
   color: var(--sgds-primary-color-default);
 }
 
-.dropdown-items a:focus,
+/* .dropdown-items a:focus,
 .dropdown-items a:focus-visible {
   outline: 0;
-}
+} */
 
 .dropdown-items a:focus-visible {
   outline: var(--sgds-outline-focus);
+  outline-offset: -5px;
   color: var(--sgds-primary-color-default);
 }
 
