--- a/src/components/ComboBox/combo-box-item.css
+++ b/src/components/ComboBox/combo-box-item.css
@@ -1,39 +1,37 @@
 :host([active]) .dropdown-item {
-    background-color: var(--sgds-primary-surface-translucent);
+  background-color: var(--sgds-primary-surface-translucent);
 }
 
 .dropdown-item {
-    background-color: var(--sgds-bg-transparent);
-    padding: var(--sgds-padding-sm) var(--sgds-padding-lg);
-    clear: both;
-    color: var(--sgds-color-default);
-    text-align: inherit;
-    cursor: pointer;
-    /* width: 100%; */
-    height: 100%;
-  }
-
+  background-color: var(--sgds-bg-transparent);
+  padding: var(--sgds-padding-sm) var(--sgds-padding-lg);
+  clear: both;
+  color: var(--sgds-color-default);
+  text-align: inherit;
+  cursor: pointer;
+  height: 100%;
+}
 
 .dropdown-item .normal-item-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 :host([active]) .dropdown-item .normal-item-content {
-    color: var(--sgds-primary-bg-default);
+  color: var(--sgds-primary-bg-default);
 }
 
 :host([active]) .dropdown-item .normal-item-content sgds-icon {
-    color: var(--sgds-primary-bg-default);
-    fill: var(--sgds-primary-bg-default);
+  color: var(--sgds-primary-bg-default);
+  fill: var(--sgds-primary-bg-default);
 }
-.dropdown-item:hover{
-    background: var(--sgds-bg-translucent-subtle);
+.dropdown-item:hover {
+  background: var(--sgds-bg-translucent-subtle);
 }
-.dropdown-item:focus, .dropdown-item:focus-visible{
-    outline: 0;
-    background: var(--sgds-bg-translucent-subtle);
-    box-shadow: inset var(--sgds-form-box-shadow-focus);
+.dropdown-item:focus,
+.dropdown-item:focus-visible {
+  background: var(--sgds-bg-translucent-subtle);
+  outline: var(--sgds-form-outline-focus);
+  outline-offset: -4px;
 }
