--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -42,7 +42,7 @@
   line-height: var(--sgds-line-height-body);
 }
 
-.form-control-group>.form-control:focus {
+.form-control-group > .form-control:focus {
   z-index: 3;
 }
 
@@ -63,8 +63,10 @@
 .form-control-group:not(.disabled):not(.is-invalid):focus,
 .form-control-group:not(.disabled):not(.is-invalid):focus-within {
   border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
-  box-shadow: var(--sgds-form-box-shadow-focus);
-  outline: 0;
+}
+
+.form-control-group:not(.disabled):not(.is-invalid):focus-within {
+  outline: var(--sgds-form-outline-focus);
 }
 
 .form-control-group.is-invalid {
@@ -98,9 +100,9 @@
 sgds-icon[role="button"] {
   cursor: pointer;
 }
-sgds-icon[role="button"]:focus,  
+sgds-icon[role="button"]:focus,
 sgds-icon[role="button"]:focus-visible {
-    outline: var(--sgds-form-outline-focus);
+  outline: var(--sgds-form-outline-focus);
 }
 
 .form-control-row {
