--- a/src/components/Masthead/masthead.css
+++ b/src/components/Masthead/masthead.css
@@ -151,17 +151,9 @@ a.trusted-websites-link:hover {
   color: light-dark(#0151a0, #96c7f7);
 }
 
-a.trusted-websites-link:focus,
-a.trusted-websites-link:focus-visible,
-.sgds-masthead-button:focus,
-.sgds-masthead-button:focus-visible {
-  outline: 0;
-}
-
 a.trusted-websites-link:focus-visible,
 .sgds-masthead-button:focus-visible {
-  outline: 0;
-	box-shadow: 0px 0px 0px 4px #60aaf4;
+  outline: 4px solid #60aaf4;
 }
 
 @media screen and (max-width: 768px) {
