--- a/src/components/OverflowMenu/overflow-menu.css
+++ b/src/components/OverflowMenu/overflow-menu.css
@@ -21,12 +21,7 @@
 	background-color: var(--sgds-bg-translucent-subtle);
 }
 
-.overflow-btn:focus,
 .overflow-btn:focus-visible {
-	outline: 0;
+	outline: var(--sgds-outline-focus);
 	background-color: var(--sgds-bg-translucent-subtle);
-}
-
-.overflow-btn:focus-visible {
-	box-shadow: var(--sgds-box-shadow-focus);
 }
