--- a/src/components/Radio/radio.css
+++ b/src/components/Radio/radio.css
@@ -36,9 +36,11 @@ input {
 
 .form-check-input:focus,
 .form-check-input:focus-visible {
-  box-shadow: var(--sgds-form-box-shadow-focus);
   border: var(--sgds-form-border-width-default) solid var(--sgds-border-color-emphasis);
-  outline: 0;
+}
+.form-check-input:focus-visible {
+  outline: var(--sgds-form-outline-focus);
+  outline-offset: 0;
 }
 
 .form-check-input:checked,
