--- a/src/components/Stepper/stepper.css
+++ b/src/components/Stepper/stepper.css
@@ -38,13 +38,9 @@
   margin-bottom: var(--sgds-padding-xl);
 }
 
-.stepper .stepper-item:focus,
-.stepper .stepper-item:focus-visible {
-  outline: 0;
-}
 
 .stepper .stepper-item.is-clickable:focus-visible {
-  box-shadow: var(--sgds-box-shadow-focus);
+  outline: var(--sgds-outline-focus);
 }
 
 .stepper.horizontal .stepper-item-container:not(:first-child) .stepper-item:before {
