--- a/src/components/Textarea/textarea.css
+++ b/src/components/Textarea/textarea.css
@@ -50,7 +50,9 @@ textarea {
 .form-control:not([disabled]):not(.is-invalid):focus,
 .form-control:not([disabled]):not(.is-invalid):focus-visible {
   border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
-  box-shadow: var(--sgds-form-box-shadow-focus);
+}
+.form-control:not([disabled]):not(.is-invalid):focus-visible {
+  outline: var(--sgds-form-outline-focus);
 }
 
 .form-control.is-invalid {
